# algos

./: percolation.py  pyproject.toml  snakes_and_ladders.py
algs/dfs/: dfs.py  test_dfs.py
google/: minimum_paths_sum.py
modelling/: simple_dataclass.py
restructure_ds/: merging_dicts.py  test_merging_dicts.py
sorting/: drafts.py
sorting/tests/: test_drafts.py
training_exercises/3duplicate_transaction_handling/: 1.py
training_exercises/4invalid_transaction_validation/: 1.py
training_exercises/duplicate_transaction_handling/: 1.py
training_exercises/portfolio_after_transactions/: 1.py  2.py
training_exercises/portfolio_discrepancy_detector/: 1.py
